// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an editable Form component if editing 1`] = `
<div
  className="root"
>
  <form
    className="root"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="body"
    >
      <h2
        className="heading"
      >
        Shipping Address
      </h2>
      <div
        className="firstname"
      >
        <div
          className="root"
        >
          <span
            className="label"
          >
            First Name
          </span>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="firstname"
                name="firstname"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="lastname"
      >
        <div
          className="root"
        >
          <span
            className="label"
          >
            Last Name
          </span>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="lastname"
                name="lastname"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="street0"
      >
        <div
          className="root"
        >
          <span
            className="label"
          >
            Street
          </span>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="street0"
                name="street[0]"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="city"
      >
        <div
          className="root"
        >
          <span
            className="label"
          >
            City
          </span>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="city"
                name="city"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="postcode"
      >
        <div
          className="root"
        >
          <span
            className="label"
          >
            ZIP
          </span>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="postcode"
                name="postcode"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="region_code"
      >
        <div
          className="root"
        >
          <span
            className="label"
          >
            State
          </span>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="region_code"
                name="region_code"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="telephone"
      >
        <div
          className="root"
        >
          <span
            className="label"
          >
            Phone
          </span>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="telephone"
                name="telephone"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="email"
      >
        <div
          className="root"
        >
          <span
            className="label"
          >
            Email
          </span>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="email"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="validation"
      />
    </div>
    <div
      className="footer"
    >
      <button
        className="button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          Cancel
        </span>
      </button>
      <button
        className="button"
        disabled={false}
        type="submit"
      >
        <span
          className="content"
        >
          Use Address
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`renders an overview Form component if not editing 1`] = `
<div
  className="root"
>
  <div
    className="body"
  >
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Ship To
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Shipping Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Pay With
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Billing Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Use
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Specify Shipping Method
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="summary"
        >
          <div />
          <br />
          <span>
             Items
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
  </div>
  <div
    className="footer"
  >
    <button
      className="root_normalPriority"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Back to Cart
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Confirm Order
      </span>
    </button>
  </div>
</div>
`;

exports[`renders billing info CTA if no payment method is entered 1`] = `
<div
  className="root"
>
  <div
    className="body"
  >
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Ship To
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Shipping Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Pay With
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Billing Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Use
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Specify Shipping Method
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="summary"
        >
          <div />
          <br />
          <span>
             Items
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
  </div>
  <div
    className="footer"
  >
    <button
      className="root_normalPriority"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Back to Cart
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Confirm Order
      </span>
    </button>
  </div>
</div>
`;

exports[`renders empty strings if payment data is not defined 1`] = `
<div
  className="root"
>
  <div
    className="body"
  >
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Ship To
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Shipping Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Pay With
          </span>
        </span>
        <span
          className="summary"
        >
          <strong
            className="paymentDisplayPrimary"
          >
            
          </strong>
          <br />
          <span
            className="paymentDisplaySecondary"
          >
            
          </span>
        </span>
        <span
          className="icon"
        >
          <span
            className="root"
          >
            <svg
              fill="none"
              height={18}
              stroke="black"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={18}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
              />
              <path
                d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Use
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Specify Shipping Method
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="summary"
        >
          <div />
          <br />
          <span>
             Items
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
  </div>
  <div
    className="footer"
  >
    <button
      className="root_normalPriority"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Back to Cart
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Confirm Order
      </span>
    </button>
  </div>
</div>
`;

exports[`renders name and street if shipping address is entered 1`] = `
<div
  className="root"
>
  <div
    className="body"
  >
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Ship To
          </span>
        </span>
        <span
          className="summary"
        >
          <strong>
            Bob Dole
          </strong>
          <br />
          <span>
            123 Street
          </span>
        </span>
        <span
          className="icon"
        >
          <span
            className="root"
          >
            <svg
              fill="none"
              height={18}
              stroke="black"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={18}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
              />
              <path
                d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Pay With
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Billing Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Use
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Specify Shipping Method
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="summary"
        >
          <div />
          <br />
          <span>
             Items
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
  </div>
  <div
    className="footer"
  >
    <button
      className="root_normalPriority"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Back to Cart
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Confirm Order
      </span>
    </button>
  </div>
</div>
`;

exports[`renders payment method summary if payment method entered 1`] = `
<div
  className="root"
>
  <div
    className="body"
  >
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Ship To
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Shipping Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Pay With
          </span>
        </span>
        <span
          className="summary"
        >
          <strong
            className="paymentDisplayPrimary"
          >
            VISA
          </strong>
          <br />
          <span
            className="paymentDisplaySecondary"
          >
            card
          </span>
        </span>
        <span
          className="icon"
        >
          <span
            className="root"
          >
            <svg
              fill="none"
              height={18}
              stroke="black"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={18}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
              />
              <path
                d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Use
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Specify Shipping Method
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="summary"
        >
          <div />
          <br />
          <span>
             Items
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
  </div>
  <div
    className="footer"
  >
    <button
      className="root_normalPriority"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Back to Cart
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Confirm Order
      </span>
    </button>
  </div>
</div>
`;

exports[`renders shipping address CTA if no shipping address is entered 1`] = `
<div
  className="root"
>
  <div
    className="body"
  >
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Ship To
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Shipping Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Pay With
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Billing Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Use
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Specify Shipping Method
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="summary"
        >
          <div />
          <br />
          <span>
             Items
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
  </div>
  <div
    className="footer"
  >
    <button
      className="root_normalPriority"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Back to Cart
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Confirm Order
      </span>
    </button>
  </div>
</div>
`;

exports[`renders shipping method CTA if no shipping method selected 1`] = `
<div
  className="root"
>
  <div
    className="body"
  >
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Ship To
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Shipping Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Pay With
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Billing Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Use
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Specify Shipping Method
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="summary"
        >
          <div />
          <br />
          <span>
             Items
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
  </div>
  <div
    className="footer"
  >
    <button
      className="root_normalPriority"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Back to Cart
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Confirm Order
      </span>
    </button>
  </div>
</div>
`;

exports[`renders shipping title if shipping method is selected 1`] = `
<div
  className="root"
>
  <div
    className="body"
  >
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Ship To
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Shipping Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Pay With
          </span>
        </span>
        <span
          className="summary"
        >
          <span
            className="informationPrompt"
          >
            Add Billing Information
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            Use
          </span>
        </span>
        <span
          className="summary"
        >
          <strong>
            shipping title
          </strong>
        </span>
        <span
          className="icon"
        >
          <span
            className="root"
          >
            <svg
              fill="none"
              height={18}
              stroke="black"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={18}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
              />
              <path
                d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
    <button
      className="root"
    >
      <span
        className="content"
      >
        <span
          className="label"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="summary"
        >
          <div />
          <br />
          <span>
             Items
          </span>
        </span>
        <span
          className="icon"
        />
      </span>
    </button>
  </div>
  <div
    className="footer"
  >
    <button
      className="root_normalPriority"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Back to Cart
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Confirm Order
      </span>
    </button>
  </div>
</div>
`;
